# PyOpenV2G

./: README.md  compile.sh  open_v2g.py  open_v2g_constants.py  open_v2g_struct_declarator.py  open_v2g_structs.py  open_v2g_tests.py  open_v2g_utils.py
open_v2g/: CMakeLists.txt  Makefile
open_v2g/source/appHandshake/: appHandEXIDatatypes.c  appHandEXIDatatypes.h  appHandEXIDatatypesDecoder.c  appHandEXIDatatypesDecoder.h  appHandEXIDatatypesEncoder.c  appHandEXIDatatypesEncoder.h
open_v2g/source/codec/: BitInputStream.c  BitInputStream.h  BitOutputStream.c  BitOutputStream.h  ByteStream.c  ByteStream.h  DecoderChannel.c  DecoderChannel.h  EXIHeaderDecoder.c  EXIHeaderDecoder.h  EXIHeaderEncoder.c  EXIHeaderEncoder.h  EncoderChannel.c  EncoderChannel.h  MethodsBag.c
open_v2g/source/din/: dinEXIDatatypes.c  dinEXIDatatypes.h  dinEXIDatatypesDecoder.c  dinEXIDatatypesDecoder.h  dinEXIDatatypesEncoder.c  dinEXIDatatypesEncoder.h
open_v2g/source/iso1/: iso1EXIDatatypes.c  iso1EXIDatatypes.h  iso1EXIDatatypesDecoder.c  iso1EXIDatatypesDecoder.h  iso1EXIDatatypesEncoder.c  iso1EXIDatatypesEncoder.h
open_v2g/source/iso2/: iso2EXIDatatypes.c  iso2EXIDatatypes.h  iso2EXIDatatypesDecoder.c  iso2EXIDatatypesDecoder.h  iso2EXIDatatypesEncoder.c  iso2EXIDatatypesEncoder.h
open_v2g/source/test/: main_databinder.c  main_example.c
open_v2g/source/transport/: v2gtp.c
open_v2g/source/xmldsig/: xmldsigEXIDatatypes.c  xmldsigEXIDatatypes.h  xmldsigEXIDatatypesDecoder.c  xmldsigEXIDatatypesDecoder.h  xmldsigEXIDatatypesEncoder.c  xmldsigEXIDatatypesEncoder.h
